--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-  "name": "krypto",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^8.2.13",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
-    "angular-datatables": "^8.0.0",
-    "core-js": "^2.6.10",
-    "datatables.net": "^1.10.20",
-    "datatables.net-dt": "^1.10.20",
-    "jquery": "^3.4.1",
-    "rxjs": "^6.5.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "rxjs-compat": "^6.0.0-rc.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.18",
-    "@angular/cli": "^8.3.18",
-    "@angular/compiler-cli": "^8.2.13",
-    "@angular/language-service": "^8.2.13",
-    "@types/datatables.net": "^1.10.18",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jquery": "^3.3.31",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^6.0.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~3.5.3"
-  }
+    "name": "krypto",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build --prod",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^8.2.13",
+        "@angular/common": "^8.2.13",
+        "@angular/compiler": "^8.2.13",
+        "@angular/core": "^8.2.13",
+        "@angular/forms": "^8.2.13",
+        "@angular/platform-browser": "^8.2.13",
+        "@angular/platform-browser-dynamic": "^8.2.13",
+        "@angular/router": "^8.2.13",
+        "angular-datatables": "^8.0.0",
+        "core-js": "^2.6.10",
+        "datatables.net": "^1.10.20",
+        "datatables.net-dt": "^1.10.20",
+        "jquery": "^3.4.1",
+        "rxjs": "^6.5.3",
+        "rxjs-compat": "^6.0.0-rc.0",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.803.18",
+        "@angular/cli": "^8.3.18",
+        "@angular/compiler-cli": "^8.2.13",
+        "@angular/language-service": "^8.2.13",
+        "@types/datatables.net": "^1.10.18",
+        "@types/jasmine": "~2.8.3",
+        "@types/jasminewd2": "~2.0.2",
+        "@types/jquery": "^3.3.31",
+        "@types/node": "~6.0.60",
+        "codelyzer": "^5.0.1",
+        "jasmine-core": "~2.8.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "protractor": "^6.0.0",
+        "ts-node": "~4.1.0",
+        "tslint": "~5.9.1",
+        "typescript": "~3.5.3"
+    }
 }
