--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2015",
+    // "paths": {
+    //   "@angular/*": [
+    //     "../node_modules/@angular/*"
+    //   ]
+    // },
     "typeRoots": [
       "node_modules/@types"
     ],
